# Prithvi-WxC

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
PrithviWxC/: __init__.py  configs.py  definitions.py  download.py  merra2.py  model.py  rollout.py
PrithviWxC/config_files/: config.yaml  large.yml  large_rollout.yml  small.yaml
PrithviWxC/dataloaders/: merra2.py  merra2_rollout.py
data/validation/: validation_data.json  validation_rmse.nc
data_preparation/: aggregation.py  prepare_data.py
docs/: requirements.txt
docs/source/: PrithviWxC.dataloaders.rst  PrithviWxC.rst  conf.py  index.rst  installation.rst
docs/source/_static/css/: custom.css
examples/: Prithvi-WxC_input_data.ipynb  PrithviWcX_inference.ipynb  PrithviWcX_rollout.ipynb  PrithviWxC_inference.ipynb  PrithviWxC_rollout.ipynb
examples/PrithviWxC/: PrithviWcX_inference.ipynb
finetune_gravity_wave/: config.py  datamodule.py  distributed.py  finetune_gravity_wave.py  gravity_wave_model.py
tests/raw_data/: MERRA2.const_2d_asm_Nx.00000000.nc4  MERRA2.const_2d_ctm_Nx.00000000.nc4  MERRA2_sfc_20200330.nc4  MERRA_pres_20200330.nc4  reduce_size.ipynb
tests/raw_data/2020/: MERRA2_400.inst1_2d_asm_Nx.20200329.nc4  MERRA2_400.inst1_2d_asm_Nx.20200330.nc4  MERRA2_400.tavg1_2d_flx_Nx.20200329.nc4  MERRA2_400.tavg1_2d_flx_Nx.20200330.nc4  MERRA2_400.tavg1_2d_rad_Nx.20200329.nc4  MERRA2_400.tavg1_2d_rad_Nx.20200330.nc4
tests/test_data_preparation/: test_prepare_data.py
validation/: config.py  config.yaml  get_assets.py  loss.py  reproducibility.py  validate_prithvi_wxc.py
