[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "PrithviWxC"
authors = [
    {name = "Will Torjak", email = "w.trojak@ibm.com"},
    {name = "Johannes Schmude"},
    {name = "Daniel Salles Civitarese"},
    {name = "Sujit Roy"},
    {name = "Shraddha Singh"},
    {name = "Johannes Jakubik"},
    {name = "Julian Kuehnert"},
]
classifiers = [
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "h5py ~= 3.3",
    "numpy ~= 1.26",
    "pandas",
    "torch >= 2.2",
]

[project.optional-dependencies]
examples = [
    "huggingface_hub >= 0.25",
    "notebook ~= 7.2",
    "matplotlib >= 3.8",
    "pyyaml ~= 6.0",
]

[tool.ruff]
line-length = 79
select = [
    "C",
    "F",
    "E",
    "W",
    "B",
    "I",
]
