[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "PrithviWxC"
authors = [
    {name = "Will Torjak"},
    {name = "Johannes Schmude"},
    {name = "Daniel Salles Civitarese"},
    {name = "Sujit Roy"},
    {name = "Shraddha Singh"},
    {name = "Johannes Jakubik"},
    {name = "Julian Kuehnert"},
]
classifiers = [
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "h5py ~= 3.3",
    "numpy ~= 1.26",
    "pandas",
    "torch >= 2.2",
    "packaging >= 24.0",
    "tqdm >= 4.66.4",
    "xarray >= 2024.3.0",
    "h5netcdf >= 1.3.0",
    "pyyaml ~= 6.0",
    "huggingface_hub >= 0.25",
]

[project.optional-dependencies]
examples = [
    "jupyterlab >= 4.2.0",
    "matplotlib >= 3.8",
]

[tool.ruff]
line-length = 79
select = [
    "C",
    "F",
    "E",
    "W",
    "B",
    "I",
]
